# openslate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  book.toml  docker-compose.yml  docker-entrypoint.sh  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: .env.example  Cargo.toml
api/migrations/: 002_preferences.sql  003_fts.sql  005_users.sql
api/src/: auth.rs  config.rs  main.rs  media.rs  notes.rs  preferences.rs  search.rs  users.rs
api/src/custom/: sync.rs
custom/landing/: index.html
docs/: SUMMARY.md  api-reference.md  architecture.md  deployment.md  features.md  index.md  setup.md
scripts/: cloud-init.yaml  host-caddy-entrypoint.sh
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html  test-setup.ts
web/src/lib/: api.ts  auth.svelte.ts  preferences.svelte.ts  theme.svelte.ts
web/src/lib/components/: CommandPalette.svelte  EditorToolbar.svelte  MarkdownEditor.svelte  MediaGallery.svelte  MediaPicker.svelte  PaneView.svelte  SettingsModal.svelte  SplitLayout.svelte  TiptapEditor.svelte  TiptapEditor.test.ts
web/src/lib/custom/: pwa.ts  sync.ts
web/src/lib/editor/: decorations.ts  index.ts  keymap.ts  slash.ts  syntax.ts  theme.ts  upload.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/login/: +page.svelte
web/static/: manifest.webmanifest  service-worker.js
