[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
    "uuid",
] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
axum-extra = { version = "0.10", features = ["cookie"] }
jsonwebtoken = "9"
bcrypt = "0.16"
time = { version = "0.3", features = ["serde"] }
