[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
    "uuid",
] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
s3 = { version = "0.1", features = ["providers"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
axum-extra = { version = "0.10", features = ["cookie"] }
jsonwebtoken = "9"
bcrypt = "0.16"
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
serial_test = "3.5.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
tower = { version = "0.5.3", features = ["util"] }
